[metadata]
name = zuul
version = attr:zuul.__version__
url = https://readthedocs.io/zuul
author = osamabinloggin
author_email = osamabinloggin@gmail.com
long_description = Gatekeeper Slack app for managing channel membership.

[options]
packages = find:
install_requires =
   attrs
   click

[options.entry_points]
console_scripts =
   zuul=zuul.__main__:cli
